Responsive for desktop

--- a/code/index.html
+++ b/code/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
 
-      <!-- Menu with a logo -->
+      <!-- Logo and menu -->
     <nav class="navbar">
       <a href="xxx" class="logo">
         <img src="./logo/ow-logo.svg" alt="Old women logo" class="logo-img">
