started working on functionality of menu icon

--- a/code/index.html
+++ b/code/index.html
@@ -30,8 +30,28 @@
             </div>
             
             <div class="mobile-menu">
+              <nav>
+                <a href="#home">Home</a>
+                <a href="#podcasts">Podcasts</a>
+                <a href="#books">Books</a>
+                <a href="#contact">Contact</a>
+              </nav>
+              <a href="javascript:void(0);" class="icon" onclick="myFunction()">       
               <i class="material-icons" style="font-size: 36px;">dehaze</i>
+              </a>
             </div>
+
+            <script>
+              function myFunction() {
+                var x = document.getElementById("mobile-menu");
+                if (x.style.display === "block") {
+                  x.style.display = "none";
+                } else {
+                  x.style.display = "block";
+                }
+              }
+            </script>
+
           </header>
 
         </div> 
