Fix big news grid

--- a/code/index.html
+++ b/code/index.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" 
-    href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Newsreader:opsz@6..72&family=PT+Sans+Narrow&family=Rubik+Gemstones&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Newsreader:opsz@6..72&family=PT+Sans+Narrow&family=Rubik+Gemstones&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./style.css" />
     <script
       src="https://kit.fontawesome.com/818262a977.js"
@@ -18,83 +21,92 @@
     <header>
       <!-- Some kind of logo and navbar -->
       <nav class="navbar">
-          <a href="#"
-            ><img
-              src="../img/a_cat.jpg"
-              alt="logo"
-              title="Logo, black cat"
-              class="logo-nav"
-          /></a>
-          <div>
-            <ul class="navbar-ul">
-              <li>
-                <a class="active home-nav" aria-current="page" href="#" title="Home"
-                  >Home</a
-                >
-              </li>
-              <li>
-                <a href="./tips.html" title="Tips">Tips</a>
-              </li>
-              <li>
-                <a href="quotes.html" title="Quotes & Memes">Quotes & Memes</a>
-              </li>
-              <li>
-                <a href="contact.html#contact" title="Contact">Contact</a>
-              </li>
-            </ul>
-          </div>
+        <a href="#"
+          ><img
+            src="../img/a_cat.jpg"
+            alt="logo"
+            title="Logo, black cat"
+            class="logo-nav"
+        /></a>
+        <div>
+          <ul class="navbar-ul">
+            <li>
+              <a
+                class="active home-nav"
+                aria-current="page"
+                href="#"
+                title="Home"
+                >Home</a
+              >
+            </li>
+            <li>
+              <a href="./tips.html" title="Tips">Tips</a>
+            </li>
+            <li>
+              <a href="quotes.html" title="Quotes & Memes">Quotes & Memes</a>
+            </li>
+            <li>
+              <a href="contact.html#contact" title="Contact">Contact</a>
+            </li>
+          </ul>
         </div>
       </nav>
-      <section class="logo-magazine">
-      <div class="kwadrat">
-        <div class="trojkat">
-          <div class="trojkat_bg"></div>
-        </div>
-      </div><h1>CatZ MagaZine</h1>
-      <div class="kwadrat2">
-        <div class="trojkat2">
-          <div class="trojkat_bg2">
-          </div>	
-        </div></div>
-        </section>
     </header>
     <div class="border-container">
+      <section class="logo-magazine">
+        <div class="kwadrat">
+          <div class="trojkat">
+            <div class="trojkat_bg"></div>
+          </div>
+        </div>
+        <h1>Catz Magazine</h1>
+        <div class="kwadrat2">
+          <div class="trojkat2">
+            <div class="trojkat_bg2"></div>
+          </div>
+        </div>
+      </section>
       <section class="big-news">
         <!-- The big news content -->
-        <div class="container">
-          <div class="flex-parent grid-parent">
-            <div class="flex-child grid-child-big-news">
-              <div class="big-news">
-                <img
-                  src="../img/sunSalutatingCat.jpg"
-                  class="img-big-news"
-                  alt="A Cat doing Yoga"
-                  title="Cat Yoga"
-                />
-              </div>
+        <div class="grid-parent">
+          <div class="grid-child-big-news medium-grid-item">
+            <h2>The Latest Rage - Yoga for Cats!</h2>
+            <p>
+              Cat Yoga is a calm and relaxing yin yoga class that suits
+              everyone. In the presence of our kitty cats, you get to land in
+              yourself. This class gives you the opportunity to feel the body,
+              let the mindrest and receive a recovery on a deep level. This is
+              more than ever in these times! Live cat yoga — participate from
+              the comfort of your own living room. After the success of cat yoga
+              in our cafe, we are now launching an exciting new product! In
+              order to welcome more participants,we will be broadcasting live
+              instructor-led yoga classes from our cat cafe every Monday and
+              Tuesday. You participate remotely via computer or mobile. If you
+              have a cat friend at home, they will participate based on their
+              desired interest. Book your place here on the website by selecting
+              <em>Online Cat Yoga</em>. We close registration 30 minutes before
+              the yoga class starts and you who registered will receive an email
+              with a link and password about 15 minutes before the start. Dates
+              for the class will be released later and we will also eventually
+              offer participants on site in the café. We look forward to meeting
+              you on the yoga mat!
+            </p>
+            <div class="primary-link">
+              <a
+                href="https://javawhiskers.se/en/cat-yoga/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Book cat yoga at Java Whiskers</a
+              >
             </div>
-            <div class="flex-child grid-child-big-news">
-              <div class="big-news">
-                <h2>The Latest Rage - Yoga for Cats!</h2>
- <p>
-                  Cat Yoga is a calm and relaxing yin yoga class that suits everyone. In the presence of our kitty cats, you get to land in yourself. 
-                  This class gives you the opportunity to feel the body, let the mind 
-                  rest and receive a recovery on a deep level. This is more important 
-                  than ever in these times! Live cat yoga — participate from the comfort 
-                  of your own living room. After the success of cat yoga in our cafe, we 
-                  are now launching an exciting new product! In order to welcome more participants,
-                  we will be broadcasting live instructor-led yoga classes from our cat cafe every 
-                  Monday and Tuesday. You participate remotely via computer or mobile. If you have 
-                  a cat friend at home, they will participate based on their desired interest. Book your 
-                  place here on the website by selecting <em>Online Cat Yoga</em>. We close registration 30 minutes 
-                  before the yoga class starts and you who registered will receive an email with a link and 
-                  password about 15 minutes before the start. Dates for the class will be released later and 
-                  we will also eventually offer participants on site in the café. We look forward to meeting you on the yoga mat!</p>
-                <p>Book now!</p>
-                <a href="https://javawhiskers.se/en/cat-yoga/" target="_blank"
-              rel="noopener noreferrer">Come do cat yoga at Java Whiskers</a>
-              </div>
-            </div>
+          </div>
+          <div class="grid-child-big-news medium-grid-item">
+            <img
+              src="../img/sunSalutatingCat.jpg"
+              class="img-big-news-one"
+              alt="A cat doing yoga indoors"
+              title="Cat Yoga indoors"
+            />
           </div>
         </div>
       </section>
@@ -104,38 +116,38 @@
          On tablets: two in a row, 
         On mobile: one card on each row. -->
       </section>
+    </div>
+    <footer>
+      <div class="logo-footer">
+        <img
+          src="../img/a_cat.jpg"
+          alt="Logo, black cat"
+          title="Logo, black cat"
+        />
+        <span class="logoTextSpan">Michelle Wegler 2023</span>
       </div>
-      <footer>
-        <div class="logo-footer">
-          <img
-            src="../img/a_cat.jpg"
-            alt="Logo, black cat"
-            title="Logo, black cat"
-          />
-          <span class="logoTextSpan">Michelle Wegler 2023</span>
+      <div class="flex-parent">
+        <div class="flex-child">
+          <a
+            href="https://www.linkedin.com/in/michellewegler/"
+            title="Linkedin Profile"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
+            ><span class="sr-only">Linkedin</span></a
+          >
         </div>
-        <div class="flex-parent">
-          <div class="flex-child">
-            <a
-              href="https://www.linkedin.com/in/michellewegler/"
-              title="Linkedin Profile"
-              target="_blank"
-              rel="noopener noreferrer"
-              ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
-              ><span class="sr-only">Linkedin</span></a
-            >
-          </div>
-          <div class="flex-child">
-            <a
-              href="https://github.com/smirrebinx/Responsive-Portfolio.git"
-              title="Github Profile"
-              target="_blank"
-              rel="noopener noreferrer"
-              ><i class="fab fa-github" aria-hidden="true"></i
-              ><span class="sr-only">Github</span></a
-            >
-          </div>
+        <div class="flex-child">
+          <a
+            href="https://github.com/smirrebinx/Responsive-Portfolio.git"
+            title="Github Profile"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fab fa-github" aria-hidden="true"></i
+            ><span class="sr-only">Github</span></a
+          >
         </div>
+      </div>
     </footer>
   </body>
 </html>
