Separate paragraphs, center logo-magazine

--- a/code/index.html
+++ b/code/index.html
@@ -70,40 +70,54 @@
         <!-- The big news content -->
         <div class="grid-parent">
           <div class="grid-child-big-news medium-grid-item">
-            <h2>The Latest Rage - Yoga for Cats!</h2>
-            <p>
-              Cat Yoga is a calm and relaxing yin yoga class that suits
-              everyone. In the presence of our kitty cats, you get to land in
-              yourself. This class gives you the opportunity to feel the body,
-              let the mindrest and receive a recovery on a deep level. This is
-              more than ever in these times! Live cat yoga — participate from
-              the comfort of your own living room. After the success of cat yoga
-              in our cafe, we are now launching an exciting new product! In
-              order to welcome more participants,we will be broadcasting live
-              instructor-led yoga classes from our cat cafe every Monday and
-              Tuesday. You participate remotely via computer or mobile. If you
-              have a cat friend at home, they will participate based on their
-              desired interest. Book your place here on the website by selecting
-              <em>Online Cat Yoga</em>. We close registration 30 minutes before
-              the yoga class starts and you who registered will receive an email
-              with a link and password about 15 minutes before the start. Dates
-              for the class will be released later and we will also eventually
-              offer participants on site in the café. We look forward to meeting
-              you on the yoga mat!
-            </p>
-            <div class="primary-link">
-              <a
-                href="https://javawhiskers.se/en/cat-yoga/"
-                target="_blank"
-                rel="noopener noreferrer"
-                >Book cat yoga at Java Whiskers</a
-              >
+            <div class="big-news-paragraph">
+              <h2>The Latest Rage - Yoga for Cats!</h2>
+              <p>
+                Cat Yoga is a calm and relaxing yin yoga class that suits
+                everyone. In the presence of our kitty cats, you get to land in
+                yourself. This class gives you the opportunity to feel the body,
+                let the mindrest and receive a recovery on a deep level. This is
+                more than ever in these times! Live cat yoga — participate from
+                the comfort of your own living room. After the success of cat
+                yoga in our cafe, we are now launching an exciting new product!
+                In order to welcome more participants, we will be broadcasting
+                live instructor-led yoga classes from our cat cafe every Monday
+                and Tuesday. You participate remotely via computer or mobile. If
+                you have a cat friend at home, they will participate based on
+                their desired interest.
+              </p>
+              <p>
+                your place here on the website by selecting
+                <em>Online Cat Yoga</em>. We close registration 30 minutes
+                before the yoga class starts and you who registered will receive
+                an email with a link and password about 15 minutes before the
+                start. Dates for the class will be released later and we will
+                also eventually offer participants on site in the café. We look
+                forward to meeting you on the yoga mat!
+              </p>
+
+              <div class="primary-link">
+                <a
+                  href="https://javawhiskers.se/en/cat-yoga/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Book cat yoga at Java Whiskers</a
+                >
+              </div>
             </div>
           </div>
           <div class="grid-child-big-news medium-grid-item">
             <img
-              src="../img/sunSalutatingCat.jpg"
+              src="../img/illustratedYogaCat.jpg"
               class="img-big-news-one"
+              alt="A cat doing yoga indoors"
+              title="Cat Yoga indoors"
+            />
+          </div>
+          <div class="grid-child-big-news medium-grid-item">
+            <img
+              src="../img/sunSalutatingCat.jpg"
+              class="img-big-news-two"
               alt="A cat doing yoga indoors"
               title="Cat Yoga indoors"
             />
