--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,73 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
+
   <body>
+
     <header>
-      <!-- Some kind of logo and navbar -->
+      <div class="navbar">
+        <img class="logo" src="logo.svg">
+        <img class="sitename" src="sitename.png">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+      </div>
     </header>
 
+    
     <section class="big-news">
-      <!-- The big news content -->
+      <div class="news-picture">
+        <a href="#"><img class="Manne" src="Manne.jpg"/></a>
+      </div>
+      <div class="news-text">
+        <h2>
+          A dog called Manfred helps picking cranberries
+        </h2>
+        <p>
+          An eight year old Shetland Sheepdog called Manfred helps owner picking cranberries. 
+          He even eats them when handed to him. 
+          Is there something we haven´t figured out about dogs and cranberries? 
+        </p>
+        <a href="#Read-me">Read this article to find out more!
+        </a>
+      </div>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+  
+    <section class="Other-news">
+      <div class="one">
+        <a href="#"><img class="Knit" src="knit.webp"/></a>
+        <h1>
+          <a href= "#">Knitting is good for both you and your spouse</a>
+        </h1>
+      </div>
+      <div class="two">
+        <a href="#"><img class="books" src="books.webp"/></a>
+        <h1>
+         <a href="#">Books everyone should have read in a lifetime</a>
+        </h1>
+      </div>
+      <div class="three">
+        <a href="#"><img class="plants" src="plants.jpg"/></a>
+        <h1>
+          <a href= "#">This is why everyone should have plants in their home</a>
+        </h1>
+      </div>
+      <div class="four">
+        <a href="#"><img class="pasta" src="pasta.jpg"/></a>
+        <h1>
+          <a href= "#">Worlds best pasta recipe</a>
+        </h1>
+      </div>
     </section>
+
+  </div>
+
   </body>
 </html>
