--- a/code/index.html
+++ b/code/index.html
@@ -107,20 +107,30 @@
             </div>
           </div>
           <div class="grid-child-big-news medium-grid-item">
-            <img
-              src="../img/illustratedYogaCat.jpg"
-              class="img-big-news-one"
-              alt="A cat doing yoga indoors"
-              title="Cat Yoga indoors"
-            />
+            <figure>
+              <img
+                src="../img/illustratedYogaCat.jpg"
+                class="img-big-news-one"
+                alt="A cat doing yoga indoors"
+                title="Cat Yoga indoors"
+              />
+              <figcaption>
+                <em>Illustration by: Touch the Peacock</em>
+              </figcaption>
+            </figure>
           </div>
           <div class="grid-child-big-news medium-grid-item">
-            <img
-              src="../img/sunSalutatingCat.jpg"
-              class="img-big-news-two"
-              alt="A cat doing yoga indoors"
-              title="Cat Yoga indoors"
-            />
+            <figure>
+              <img
+                src="../img/sunSalutatingCat.jpg"
+                class="img-big-news-two"
+                alt="A cat doing yoga indoors"
+                title="Cat Yoga indoors"
+              />
+              <figcaption>
+                <em>Photo by: Michelle Wegler</em>
+              </figcaption>
+            </figure>
           </div>
         </div>
       </section>
