Change border width and logo magazine

--- a/code/contact.html
+++ b/code/contact.html
@@ -53,7 +53,7 @@
             <div class="trojkat_bg"></div>
           </div>
         </div>
-        <h1>CatZ MagaZine</h1>
+        <h1>Catz Magazine</h1>
         <div class="kwadrat2">
           <div class="trojkat2">
             <div class="trojkat_bg2"></div>
