--- a/code/index.html
+++ b/code/index.html
@@ -52,20 +52,20 @@
         </div>
       </nav>
     </header>
+    <section class="logo-magazine">
+      <div class="kwadrat">
+        <div class="trojkat">
+          <div class="trojkat_bg"></div>
+        </div>
+      </div>
+      <h1>Catz Magazine</h1>
+      <div class="kwadrat2">
+        <div class="trojkat2">
+          <div class="trojkat_bg2"></div>
+        </div>
+      </div>
+    </section>
     <div class="border-container">
-      <section class="logo-magazine">
-        <div class="kwadrat">
-          <div class="trojkat">
-            <div class="trojkat_bg"></div>
-          </div>
-        </div>
-        <h1>Catz Magazine</h1>
-        <div class="kwadrat2">
-          <div class="trojkat2">
-            <div class="trojkat_bg2"></div>
-          </div>
-        </div>
-      </section>
       <section class="big-news">
         <!-- The big news content -->
         <div class="grid-parent">
@@ -87,7 +87,7 @@
                 their desired interest.
               </p>
               <p>
-                your place here on the website by selecting
+                Book your place here on the website by selecting
                 <em>Online Cat Yoga</em>. We close registration 30 minutes
                 before the yoga class starts and you who registered will receive
                 an email with a link and password about 15 minutes before the
