--- a/code/quotes.html
+++ b/code/quotes.html
@@ -51,7 +51,7 @@
             <div class="trojkat_bg"></div>
           </div>
         </div>
-        <h1>CatZ MagaZine</h1>
+        <h1>Catz Magazine</h1>
         <div class="kwadrat2">
           <div class="trojkat2">
             <div class="trojkat_bg2"></div>
