--- a/code/index.html
+++ b/code/index.html
@@ -38,62 +38,64 @@
     <img class ="fit" src="https://i.ibb.co/LxzRJ93/Pexels-jaime-reimer-2662116.jpg" alt="Pexels-jaime-reimer-2662116">
         <div class="top-news">
             <h3>FINALLY WE CAN START TRAVEL AGAIN</h3> 
-                <h4>text text text text text text</h4>
+                <h4>Finally after 2 years not being able to travel, we are now able to travel again. And what an adventure it will be!</h4>
             </div>
         </div>       
 </section>
-<div class="news"> 
+<section class="grid"> 
     <div class="item">
         <img class ="fit-image" img src="https://i.ibb.co/frSMw0d/pexels-tom-piotrowski-1608383.png" style="width: 300px; height: 300px;" alt="pexels-tom-piotrowski-1608383">
             <h4>GOLF ESCAPES </h4>
-                <p> text text text text text text text text text text text text text text text
+                <p> Experience fantastic golf in exotic places around the world.
                 </p>
         </div> 
     <div class="item">
         <img class ="fit-image" img src="https://i.ibb.co/tDpd8yz/pexels-photomix-company-286581.png" style="width: 300px; height: 300px;" alt="pexels-photomix-company-286581">
         <h4>SKI HOLIDAY</h4>
-            <p> text text text text text text text text text text text text text text text
+            <p> Experience fantastic skiing in exotic places around the world.
             </p>    
         </div> 
     <div class="item">
         <img class ="fit-image" img src="https://i.ibb.co/r52Hd5h/pexels-quintin-gellar-313782.png" style="width: 300px; height: 300px;" alt="pexels-quintin-gellar-313782">
             <h4>CITY BREAK</h4>
-                <p> text text text text text text text text text text text text text text text
+                <p> Experience fantastic cities and city life around the world.
              </p>    
         </div>
     <div class="item">
         <img class ="fit-image" img src="https://i.ibb.co/5cycT4H/pexels-ibadah-mimpi-3229454.png" style="width: 300px; height: 300px;" alt="pexels-ibadah-mimpi-3229454">
             <h4>BEACH VIBES</h4>
-                <p> text text text text text text text text text text text text text text text
+                <p> Experience the most beautiful beaches around the world.
             </p>    
         </div>
     <div class="item">
         <img class ="fit-image" img src="https://i.ibb.co/6bLkm0Q/pexels-stein-egil-liland-1933239.jpg" style="width: 300px; height: 300px;" alt="pexels-stein-egil-liland-1933239">
             <h4>NORTHERN LIGHTS</h4>
-                <p> text text text text text text text text text text text text text text text
+                <p> Experience the most extraordinary Northern lights in the world.
             </p>    
         </div> 
      <div class="item">
         <img class ="fit-image" img src="https://i.ibb.co/rm3fd6K/pexels-arthur-brognoli-2317536.jpg" style="width: 300px; height: 300px;" alt="pexels-arthur-brognoli-2317536">
             <h4>SAFARI</h4>
-                <p> text text text text text text text text text text text text text text text
+                <p> Experience safari and whiteness animal life like never before.
            </p>    
      </div> 
     <div class="item">
         <img class ="fit-image"img src="https://i.ibb.co/7Crd5j1/pexels-headshatter-1252396.jpg" style="width: 300px; height: 300px;" alt="pexels-headshatter-1252396">
             <h4>KAYAKING</h4>
-                <p> text text text text text text text text text text text text text text text
+                <p> Experience kayaking in the most breathtaking environments around the world.
             </p>    
     </div>
     <div class="item">
         <img class ="fit-image" img src="https://i.ibb.co/R46JFLV/pexels-baptiste-valthier-803226.jpg" style="width: 300px; height: 300px;" alt="pexels-baptiste-valthier-803226">
             <h4>CAMPING</h4>
-                <p> text text text text text text text text text text text text text text text
+                <p> Experience camping in the most breathtaking environments around the world.
             </p>    
         </div>
-    </div>
-        <div class="footer">
-            <h5> - TRAVEL NEWS - </h5>    
-        </div> 
+    </section>
+    
+        <footer> 
+            <p> - TRAVEL NEWS - </p>
+  </footer>
+
     </body>
 </html>
