Fixed grid dimensions in media queries, added a box shadow

--- a/code/index.html
+++ b/code/index.html
@@ -16,11 +16,8 @@
             <img class ="flex-child-image"src="./chocolate-logo.jpg" alt="Chocolate-logo">
             <h1 class ="flex-child-logo-title">The Chocolate Post</h1>
           </section>
-          <!--new-->
-          
-          <!--new-->
           <div id="myLinks">
-            <ul class ="nav_links">
+            <ul class ="nav-links">
               <li><a href="#about">About</a></li>
               <li><a href="#recipes">Recipes</a></li>
               <li><a href="#news">News</a></li>
@@ -47,11 +44,11 @@
       <section class="grid-parent-big-news">
       <!-- The big news content -->
         <div class="grid-item-big-card-img">
-          <img src="./chocolate-cake-fudge.jpeg" alt ="chocolate-fudge-cake">
+          <img src="./chocolate-fudge-cake.jpg" alt ="chocolate-fudge-cake">
          </div>
         <div class="grid-item-big-text">
-          <h2 class="card__title" style="padding-bottom:1em">Recipe of the Week</h2>
-          <h3 class ="card__description" style="padding-bottom:1em">Chocolate Fudge Cake with rich buttercream</h3>
+          <h2 class="card-title" style="padding-bottom:1em">Recipe of the Week</h2>
+          <h3 class ="card-description" style="padding-bottom:1em">Chocolate Fudge Cake with rich buttercream</h3>
           <p> The perfect Chocolate Fudge Cake covered in a creamy, lush chocolate buttercream. Two layers of buttery, chocolate goodness, paired with the ultimate frosting and chocolate shavings - heaven!</p> 
           <p style ="padding-top:1em"> Perfect for any occassion, it's easy-peasy to make, too!</p>
           <p style ="padding-top: 1em">You'll be coming back for seconds in no time!</p>
@@ -62,48 +59,48 @@
        <!-- The other news  -->
         <div class="grid-item-card">
          <img src="./chocolate-drink.jpeg" alt="chocolate-drink">
-         <p>What alcohol pairs well with chocolate?</p>
+         <h4>What alcohol pairs well with chocolate?</h4>
          <a href="https://www.toastmag.co.nz/spirits/pairing-chocolate-and-alcohol">Drink me!</a>
         </div>
         <div class="grid-item-card">
           <img src="./vegan-chocolate.jpeg" alt="vegan-chocolate">
-          <p>Looking for vegan chocolate?</p>
+          <h4>Looking for vegan chocolate?</h4>
           <a href="https://vegnews.com/vegan-guides/chocolate/accidentally-vegan-chocolates">Find me!</a>
         </div> 
       <div class="grid-item-card">
         <img src="./chocolate-chilli.jpeg" alt="chocolate-chilli">
-        <p>What happens when we add chilli to chocolate?</p>
+        <h4>What happens when we add chilli to chocolate?</h4>
         <a href="https://www.southernliving.com/food/dish/chili/chocolate-in-chili">Spice me!</a>
       </div>
       <div class="grid-item-card">
         <img src="./dark-chocolate.jpeg" alt="dark-chocolate">
-        <p>The health benefits of dark chocolate.</p>
+        <h4>The health benefits of dark chocolate.</h4>
         <a href="https://www.everydayhealth.com/diet-and-nutrition-pictures/delicious-reasons-to-eat-dark-chocolate.aspx">Teach me!</a>
       </div>
       <div class="grid-item-card">
-        <img src="./chocolate-drink.jpeg" alt="chocolate-drink">
-        <p>What alcohol pairs well with chocolate?</p>
-        <a href="https://www.toastmag.co.nz/spirits/pairing-chocolate-and-alcohol">Drink me!</a>
-      </div>
-      <div class="grid-item-card">
-        <img src="./vegan-chocolate.jpeg" alt="vegan-chocolate">
-        <p>Looking for vegan chocolate?</p>
-        <a href="https://vegnews.com/vegan-guides/chocolate/accidentally-vegan-chocolates">Find me!</a>
-      </div> 
-      <div class="grid-item-card">
-        <img src="./chocolate-chilli.jpeg" alt="chocolate-chilli">
-        <p>What happens when we add chilli to chocolate?</p>
-        <a href="https://www.southernliving.com/food/dish/chili/chocolate-in-chili">Spice me!</a>
-      </div>
-      <div class="grid-item-card">
-        <img src="./dark-chocolate.jpeg" alt="dark-chocolate">
-        <p>The health benefits of dark chocolate.</p>
-        <a href="https://www.everydayhealth.com/diet-and-nutrition-pictures/delicious-reasons-to-eat-dark-chocolate.aspx">Teach me!</a>
-      </div>
+        <img src="./chocolate-drink.jpeg" alt="cacao-beans">
+        <h4>What do you know about cacao beans?</h4>
+        <a href="https://www.lakechamplainchocolates.com/what-is-cacao/">Tell me!</a>
+       </div>
+       <div class="grid-item-card">
+         <img src="./vegan-chocolate.jpeg" alt="vegan-chocolate">
+         <h4>Looking for vegan chocolate?</h4>
+         <a href="https://vegnews.com/vegan-guides/chocolate/accidentally-vegan-chocolates">Find me!</a>
+       </div> 
+     <div class="grid-item-card">
+       <img src="./chocolate-chilli.jpeg" alt="chocolate-chilli">
+       <h4>What happens when we add chilli to chocolate?</h4>
+       <a href="https://www.southernliving.com/food/dish/chili/chocolate-in-chili">Spice me!</a>
+     </div>
+     <div class="grid-item-card">
+       <img src="./dark-chocolate.jpeg" alt="dark-chocolate">
+       <h4>The health benefits of dark chocolate.</h4>
+       <a href="https://www.everydayhealth.com/diet-and-nutrition-pictures/delicious-reasons-to-eat-dark-chocolate.aspx">Teach me!</a>
+     </div>
     </section>
     <footer>
       <img class ="technigo-logo" src="logo.svg" alt=Technigo-SVG>
-      <p>Class of 2023 - Fiona Klacar</p>
+      <p>Class of Spring 2023 - Fiona Klacar</p>
     </footer>
   </body>
 </html>
