Add fonts, add instagram icon

--- a/code/index.html
+++ b/code/index.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Newsreader:opsz@6..72&family=PT+Sans+Narrow&family=Rubik+Gemstones&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Newsreader:opsz@6..72&family=PT+Sans+Narrow&family=Rubik+Gemstones&family=Rye&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
@@ -73,7 +71,7 @@
         <div class="grid-parent">
           <div class="grid-child-big-news medium-grid-item">
             <div class="big-news-paragraph">
-              <h2>The Latest Rage - Yoga for Cats!</h2>
+              <h2>The Latest Rage - Cat Yoga!</h2>
               <p>
                 Cat Yoga is a calm and relaxing yin yoga class that suits
                 everyone. In the presence of our kitty cats, you get to land in
@@ -109,17 +107,27 @@
             </div>
           </div>
           <div class="grid-child-big-news medium-grid-item">
-            <figure>
-              <img
-                src="../img/illustratedYogaCat.jpg"
-                class="img-big-news-one"
-                alt="A cat doing yoga indoors"
-                title="Cat Yoga indoors"
-              />
-              <figcaption>
-                <em>Illustration by: Touch the Peacock</em>
-              </figcaption>
-            </figure>
+            <div class="img-big-news-div">
+              <figure>
+                <img
+                  src="../img/illustratedYogaCat.jpg"
+                  class="img-big-news-one"
+                  alt="A cat doing yoga indoors"
+                  title="Cat Yoga indoors"
+                />
+                <figcaption>
+                  <em>Illustration by: Touch the Peacock</em>
+                  <a
+                    href="https://www.instagram.com/touchthepeacock/"
+                    title="Instagram Profile"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    ><i class="fa-brands fa-instagram" aria-hidden="true"></i
+                    ><span class="sr-only">Instagram</span></a
+                  >
+                </figcaption>
+              </figure>
+            </div>
           </div>
           <div class="grid-child-big-news medium-grid-item">
             <figure>
