--- a/code/tips.html
+++ b/code/tips.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&family=Rubik+Gemstones&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Newsreader:opsz@6..72&family=PT+Sans+Narrow&family=Playfair+Display&family=Rubik+Gemstones&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
