--- a/code/quotes.html
+++ b/code/quotes.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&family=Rubik+Gemstones&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Newsreader:opsz@6..72&family=PT+Sans+Narrow&family=Playfair+Display&family=Rubik+Gemstones&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
