made logo stick while mobile menu open

--- a/code/index.html
+++ b/code/index.html
@@ -17,7 +17,7 @@
           <header>
           <!--LOGO for Company name-->
             <div class="company-name">
-              <a href="x">Company name</a>
+              <a href="x"class="active">Company name</a>
             </div>
             <!-- NAVBAR -->
             <div class="nav-bar">
@@ -30,15 +30,16 @@
             </div>
             
             <div class="mobile-menu">
-              <div id="myLinks">
-                <a href="#home" class="active">Home</a>
-                <a href="#podcasts">Podcasts</a>
-                <a href="#books">Books</a>
-                <a href="#contact">Contact</a>
-              </div>
               <a href="javascript:void(0);" class="icon" onclick="myFunction()">       
                 <i class="material-icons" style="font-size: 36px;">dehaze</i>
               </a>
+              <div id="myLinks">
+                <a href="#home">Home</a>
+                <a href="#podcasts">Podcasts</a>
+                <a href="#books">Books</a>
+                <a href="#contact">Contact</a>
+              </div>          
+              
             </div>
 
             <script>
