fixed responsive problems with images and continued styling

--- a/code/index.html
+++ b/code/index.html
@@ -44,13 +44,13 @@
       <section class="grid-parent-big-news">
       <!-- The big news content -->
         <div class="grid-item-big-card-img">
-          <img src="./chocolate-fudge-cake.jpg" alt ="chocolate-fudge-cake">
+          <img src="./chocolate-two-layer-cake.jpg" alt ="chocolate-fudge-cake">
          </div>
         <div class="grid-item-big-text">
           <h2 class="card-title" style="padding-bottom:1em">Recipe of the Week</h2>
           <h3 class ="card-description" style="padding-bottom:1em">Chocolate Fudge Cake with rich buttercream</h3>
-          <p> The perfect Chocolate Fudge Cake covered in a creamy, lush chocolate buttercream. Two layers of buttery, chocolate goodness, paired with the ultimate frosting and chocolate shavings - heaven!</p> 
-          <p style ="padding-top:1em"> Perfect for any occassion, it's easy-peasy to make, too!</p>
+          <p> The perfect Chocolate Fudge Cake covered in a creamy, lush chocolate buttercream. Layers of buttery, chocolate goodness, paired with the ultimate frosting and chocolate shavings - heaven!</p> 
+          <p style ="padding-top:1em"> Perfect for any occassion, it's easy-peasy to make, too.</p>
           <p style ="padding-top: 1em">You'll be coming back for seconds in no time!</p>
           <a class ="click-me" href="https://www.sweetestmenu.com/chocolate-fudge-layer-cake/"><button>Bake me!</button></a>
         </div>
@@ -73,29 +73,29 @@
         <a href="https://www.southernliving.com/food/dish/chili/chocolate-in-chili">Spice me!</a>
       </div>
       <div class="grid-item-card">
-        <img src="./dark-chocolate.jpeg" alt="dark-chocolate">
-        <h4>The health benefits of dark chocolate.</h4>
-        <a href="https://www.everydayhealth.com/diet-and-nutrition-pictures/delicious-reasons-to-eat-dark-chocolate.aspx">Teach me!</a>
+        <img src="./hot-chocolate.jpg" alt="hot-chocolate">
+        <h4>Looking for an indulgent treat?</h4>
+        <a href="https://kitchenmason.com/indulgent-homemade-hot-chocolate/">Inspire me!</a>
       </div>
       <div class="grid-item-card">
-        <img src="./chocolate-drink.jpeg" alt="cacao-beans">
-        <h4>What do you know about cacao beans?</h4>
+        <img src="./cacao-beans-image.jpg" alt="cacao-beans">
+        <h4>Want to know more about cacao beans?</h4>
         <a href="https://www.lakechamplainchocolates.com/what-is-cacao/">Tell me!</a>
        </div>
        <div class="grid-item-card">
-         <img src="./vegan-chocolate.jpeg" alt="vegan-chocolate">
-         <h4>Looking for vegan chocolate?</h4>
-         <a href="https://vegnews.com/vegan-guides/chocolate/accidentally-vegan-chocolates">Find me!</a>
+         <img src="./chocolate-and-fruit.jpg" alt="chocolate-and-fruit">
+         <h4>Which fruit tastes good with chocolate?</h4>
+         <a href="https://www.berries.com/blog/fruit-chocolate-pairings">Show me!</a>
        </div> 
      <div class="grid-item-card">
-       <img src="./chocolate-chilli.jpeg" alt="chocolate-chilli">
-       <h4>What happens when we add chilli to chocolate?</h4>
-       <a href="https://www.southernliving.com/food/dish/chili/chocolate-in-chili">Spice me!</a>
+       <img src="./birthday-cake.jpg" alt="birhtday-cake">
+       <h4>How can I make a sugar-free chocolate birthday cake?</h4>
+       <a href="https://thebestcakerecipes.com/sugar-free-chocolate-cake/">Help me!</a>
      </div>
      <div class="grid-item-card">
-       <img src="./dark-chocolate.jpeg" alt="dark-chocolate">
-       <h4>The health benefits of dark chocolate.</h4>
-       <a href="https://www.everydayhealth.com/diet-and-nutrition-pictures/delicious-reasons-to-eat-dark-chocolate.aspx">Teach me!</a>
+      <img src="./dark-chocolate.jpeg" alt="dark-chocolate">
+      <h4>The health benefits of dark chocolate.</h4>
+      <a href="https://www.everydayhealth.com/diet-and-nutrition-pictures/delicious-reasons-to-eat-dark-chocolate.aspx">Teach me!</a>
      </div>
     </section>
     <footer>
