Update big news images

--- a/code/index.html
+++ b/code/index.html
@@ -69,7 +69,7 @@
       <section class="big-news">
         <!-- The big news content -->
         <div class="grid-parent">
-          <div class="grid-child-big-news medium-grid-item">
+          <div class="grid-child-big-news paragraph-grid-item">
             <div class="big-news-paragraph">
               <h2>The Latest Rage - Cat Yoga!</h2>
               <p>
@@ -112,11 +112,11 @@
                 <img
                   src="../img/illustratedYogaCat.jpg"
                   class="img-big-news-one"
-                  alt="A cat doing yoga indoors"
-                  title="Cat Yoga indoors"
+                  alt="A cat sitting in the lotus position"
+                  title="Cat Yoga Lotus Position"
                 />
                 <figcaption>
-                  <em>Illustration by: Touch the Peacock</em>
+                  <em>Illustration: Touch the Peacock</em>
                   <a
                     href="https://www.instagram.com/touchthepeacock/"
                     title="Instagram Profile"
@@ -135,10 +135,10 @@
                 src="../img/sunSalutatingCat.jpg"
                 class="img-big-news-two"
                 alt="A cat doing yoga indoors"
-                title="Cat Yoga indoors"
+                title="Cat Yoga Indoors"
               />
               <figcaption>
-                <em>Photo by: Michelle Wegler</em>
+                <em>Photo: Michelle Wegler</em>
               </figcaption>
             </figure>
           </div>
