--- a/code/index.html
+++ b/code/index.html
@@ -30,7 +30,6 @@
     <section class="big-news">
       <img src="./img/Three-ladies-laughing-bw.jpg" alt="women having fun" class="big-img">
 
-      <span class="line"></span>
       <h1>
         Aging is a 
         woman's secret power -
@@ -39,13 +38,13 @@
         the data proves it
       </h1>
 
-      <p class="big-text"> 
+      <p class="p-big"> 
         In less than 15 years, people aged 65 and up will outnumber those 18 and under for the 
         first time in U.S. history. This major demographic shift presents a good opportunity for 
         reevaluating our stereotypes and negative assumptions about getting older. Aging comes for us all,
         so it’s time to tune into its upsides, particularly for women.
       </p>
-      <p class="big-text"> 
+      <p class="p-big"> 
         Right now, older women face a double challenge of ageism and sexism, and a common response to these 
         obstacles is to feel uncomfortable as one ages and try to hide it to the extent possible. But in fact, 
         being older is a tremendous advantage for many women, particularly women in leadership positions. 
@@ -55,12 +54,27 @@
 
     </section>
     
+    <!-- two articles in different sizes -->
+     <section class="medium-news">
+      <div class="small-box">
+        <img src="./img/internet.jpg" alt="internet" class="small-img">
+        <h4>What has internet done for us?</h4>
+        <p class="p-medium"> How does it really feel to watch your grandkids on twitch instead of having them in your house eating your cookies?</p>
+      </div>
+      <div class="medium-box">
+        <h3>I don't regret anything, love has been my strongest asset...
+          on't regret anything, love has been my strongest asset..
+          on't regret anything, love has been my strongest asset..
+        </h3>
+      
+      </div>
+    </section>
 
     <!-- Articles in a grid -->
     <section class="grid-parent">
-      <a href="#">
+      <a href="https://www.newyorker.com/culture/photo-booth/sea-women-of-south-korea?epik=dj0yJnU9Mm9QTC11SzN1alVXQ1dYWVVuZ3pvOUJ3cjBrMGFBN0omcD0wJm49Vm10c1FlYkJPZ3lhLWNrcUNmZkllZyZ0PUFBQUFBR1BELUtF">
         <div class="grid-item">
-          <img src="./img/diver.jpg" alt="Diver"> 
+          <img src="./img/diver.png" alt="Diver"> 
           <p>Haenyea: Women of the sea</p>
         </div>
       </a>
@@ -81,11 +95,25 @@
 
       <a href="https://youtube.com/clip/UgkxetpYb_ZADTUziL3gxrdo_zeO9eSjpBhu" alt="click a link">
         <div class="grid-item">
-          <img src="./img/bath-1.jpg" alt="thing happening">
+          <img src="./img/bath-1.jpg" alt="Enjoy a bath">
           <p>If it wiggles, you will live longer</p> 
         </div>
       </a>
     </section>
+
+    <!-- a quoted article for fun -->
+    <section class="quote">
+      <div class="quote-text">
+        <h2>Fear old women in fairy tales. 
+          For as long as people have been telling stories, 
+          crones have been scaring the wits out of children. 
+          But why does the face of evil so often belong to an old woman?...
+        </h2>
+      </div>
+    </section>
+
+
+
 
     <footer>
       <section>
